force-app/main/default/objects/Standard_Price__c/Standard_Price__c.object-meta.xml
<CustomObject>
    <label>Standard Price</label>
    <nameField>
        <label>Standard Price Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Standard Prices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>