force-app/main/default/objects/Standard_Price__c/fields/ItemCode__c.field-meta.xml
<CustomField>
    <fullName>ItemCode__c</fullName>
    <label>ItemCode</label>
    <length>80</length>
    <type>Text</type>
</CustomField>