force-app/main/default/objects/Standard_Price__c/fields/Outbound_Cost_Piece__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Cost_Piece__c</fullName>
    <label>Outbound Cost Piece</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>