force-app/main/default/objects/Standard_Price__c/fields/Pallet_Parcel__c.field-meta.xml
<CustomField>
    <fullName>Pallet_Parcel__c</fullName>
    <label>Pallet Parcel</label>
    <length>20</length>
    <type>Text</type>
</CustomField>