force-app/main/default/objects/Standard_Price__c/fields/Warehouse_Cost_Piece__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Cost_Piece__c</fullName>
    <label>Warehouse Cost Piece</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>