force-app/main/default/objects/Standard_Price__c/fields/WhsCode__c.field-meta.xml
<CustomField>
    <fullName>WhsCode__c</fullName>
    <label>WhsCode</label>
    <length>12</length>
    <type>Text</type>
</CustomField>