force-app/main/default/objects/Standard_Price__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>WhsCode__c</columns>
    <columns>Incoterms__c</columns>
    <columns>Zone__c</columns>
    <columns>Pallet_Parcel__c</columns>
    <columns>ItemCode__c</columns>
    <columns>Standard_Cost__c</columns>
    <columns>Inbound_Cost_Piece__c</columns>
    <columns>Warehouse_Cost_Piece__c</columns>
    <columns>Outbound_Cost_Piece__c</columns>
    <columns>Duty_Cost_Piece__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Incoterms__c</field>
        <operation>equals</operation>
        <value>FOB</value>
    </filters>
    <label>All</label>
</ListView>